   still loaded in addition to the indicated ones.
 - There is now support for categories in different languages.

Other Improvements:
 - Freevial does now work with Python version 2.4, in addition to 2.5.
 - Decreased the time it takes for the wheel to switch to a question when
   the game is muted.
 - Added an option (--preload) to load everything at startup.
 - All .xml files are now validated using a XSD schema when they are loaded.
 - Forced line breaks in XML files are now represented by "<br/>" (LP: 179621).
 - All error messages are now written to stderr.

Bug Fixes:
 - Fixed the --database option; it did not work previously.
 - Fixed file permissions so that the installation script works for end users.
 - Fixed a bug in the wheel which could cause it to return to the team
   selection screen instead of showing a question.
 - User requested end of the game ("e" key) works correctly now (LP: #184420).


Version 1.2 - Perfectionism
------------------------------

This is the third release of Freevial, which mainly only features some
important bugfixes and little improvements. Below we will highlight the
most important changes.

Improvements:
 - Further reduced CPU usage, saving some more cycles now.
 - If only a name (and not a path) is passed as --skin, and there's no
   directory with that name in the working directory, Freevial will now
   try to find if a skin with that name is installed somewhere.

Bug Fixes:
 - Fixed an evil crash which toke place each time a team won a game.
 - Fixed a crash which happened when there were no more questions left in
   a category whose name contained special characters.
 - Fixed a crash reproducible by pressing 'q' or escape on the end screen
   when the music is disabled.
 - Fixed the installation script to really install all provided skins.


Version 1.1 - Nightshift
------------------------------

This second release of Freevial includes a lot of important changes