@@ -17,7 +17,7 @@
     </authors>
   </information>
   <appearance>
-    <image>categoria_esports.png</image>
+    <image>category_sport.png</image>
     <sound>c2.ogg</sound>
   </appearance>
   <questions>
